7. ListIterator [#350217]